# Gateway_Rust

./: .env.example  .env.prod  .gitignore  CLAUDE.md  Cargo.toml  DEBUG_STARTUP.md  Dockerfile  FIXES_APPLIED.md  FRONTEND_DEVELOPMENT_PLAN.md  PROJECT_COMPLETION_SUMMARY.md  README.md  STATUS.md  api_server_20009.js  api_server_fixed.js  cargo_test.bat  check-schema.js  create-real-modbus-device.js  debug-api.js  debug-auth.html  debug-device-query.js  debug-fix.html  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  final-modbus-verification.js  final_test.ps1  health_check.js  mock-api.js  package-lock.json  package.json  playwright.config.js  quick_start.md  run-migrations.js  setup_env.ps1  simple-modbus-integration.js  start-debug-deps.bat  start-dev.bat  start-mock-api.bat  start-mock-modbus.py  start-prod.bat  (+24 more)
.cargo/: config.toml
.claude/: settings.local.json
.github/: CONFIG_SECURITY_PLAN.md  DEPLOYMENT_ANALYSIS.md  HIGH_AVAILABILITY_PLAN.md  PRODUCTION_READINESS_CHECKLIST.md
.serena/: project.yml
archive/: README.md  SYSTEM_STATUS_20000.md
config/: default.yaml  dev-debug.yaml  dev.yaml  docker-gateway.yml  (+5 more)
connectors/mqtt5/: Cargo.toml
connectors/mqtt5/src/: batcher.rs  config.rs  connector.rs  inflight.rs  lib.rs  metrics.rs
connectors/mqtt5/tests/: batch_tests.rs  config_tests.rs  connector_tests.rs  fixed_connector_tests.rs  reconnect_tests.rs  simple_mqtt_test.rs
core/advanced-features/: Cargo.toml
core/advanced-features/src/: analytics.rs  automation.rs  data_pipeline.rs  edge_compute.rs  edge_ml.rs  lib.rs  optimization.rs  predictive.rs  time_series.rs
core/alert-engine/: Cargo.toml
core/alert-engine/src/: config.rs  engine.rs  error.rs  evaluator.rs  lib.rs  main.rs  models.rs  notifiers.rs  routes.rs  service.rs
core/alert-engine/src/notifiers/: email.rs  mod.rs  webhook.rs  websocket.rs
core/alert-engine/src/routes/: channels.rs  events.rs  mod.rs  rules.rs
core/config-manager/: Cargo.toml
core/config-manager/src/: lib.rs  manager.rs  schemas.rs
core/config-manager/tests/: hotreload_tests.rs  manager_tests.rs  schemas_tests.rs
core/driver-manager/: Cargo.toml
core/driver-manager/src/: driver.rs  dynamic.rs  lib.rs  loader.rs  manager.rs  registry.rs  registry_manager.rs  supervisor.rs
core/driver-manager/tests/: driver_tests.rs  lifecycle_tests.rs  registry_tests.rs
core/driver-sdk/: Cargo.toml
core/driver-sdk/src/: abi.rs  driver.rs  error.rs  lib.rs  macros.rs
core/dynamic-driver/: Cargo.toml
core/dynamic-driver/src/: abi.rs  error.rs  hotswap.rs  lib.rs  loader.rs  metadata.rs  registry.rs  security.rs
core/endpoint-kit/: Cargo.toml
core/endpoint-kit/src/: backpressure.rs  circuitbreaker.rs  control.rs  decorator.rs  error.rs  lib.rs  metrics.rs  pool.rs  url.rs
core/endpoint-kit/tests/: pool_tests.rs.disabled  url_tests.rs
core/frame-bus/: Cargo.toml  build.rs
core/frame-bus/proto/: frame.proto
core/frame-bus/src/: command.rs  config.rs  control.rs  envelope.rs  filter.rs  generated.rs  lib.rs  metrics.rs  permissions.rs  ring.rs  wal.rs
core/frame-bus/tests/: ring_buffer_tests.rs  simple_test.rs  wal_tests.rs
core/metrics-server/: Cargo.toml
core/metrics-server/src/: comprehensive.rs  integration.rs  lib.rs  server.rs
core/monitoring/: Cargo.toml
core/monitoring/src/: alerts.rs  diagnostics.rs  health.rs  lib.rs
core/production-config/: Cargo.toml
core/production-config/src/: encryption.rs  environment.rs  lib.rs  validation.rs
core/protocol-bridge/: Cargo.toml
core/protocol-bridge/src/: abi.rs  bridge.rs  error.rs  lib.rs  modbus.rs  opcua.rs  plugin.rs  runtime.rs
core/rest-api/: Cargo.toml
core/rest-api/src/: auth.rs  error.rs  handlers.rs  lib.rs  middleware.rs  rbac.rs  server.rs  server_v2.rs  simple_test.rs
core/web-gw-api/: Cargo.toml
core/web-gw-api/src/: bootstrap.rs  config.rs  database_pool.rs  dto.rs  error.rs  lib.rs  main.rs  middleware.rs  openapi.rs  response.rs
core/web-gw-api/src/routes/: alerts.rs  devices.rs  driver_configs.rs  drivers.rs  health.rs  history.rs  mod.rs  system.rs  tags.rs  websocket.rs
core/web-gw-api/src/services/: frame_bus_bridge.rs  history.rs  mod.rs  protocol_mapper.rs
core/web-server/: Cargo.toml
core/web-server/src/: lib.rs
drivers/modbus-static/: Cargo.toml
drivers/modbus-static/src/: codec.rs  config.rs  driver.rs  lib.rs  metrics.rs
drivers/modbus-static/tests/: codec_tests.rs
edge-gateway/: Cargo.toml
edge-gateway/src/: main.rs
infra/pg-repo/: Cargo.toml
infra/pg-repo/src/: alert_repo.rs  device_repo.rs  driver_config_repo.rs  driver_repo.rs  error.rs  lib.rs  models.rs  tag_repo.rs
tests/: Cargo.toml  frame_bus_performance_test.rs  integration_tests.rs
tests/common/: mock_plc.rs  mod.rs  test_env.rs
tests/e2e/: smoke.spec.js  system-health.spec.js  webgw-api.spec.ts
tests/integration/: Makefile  README.md  docker-compose.yml  mod.rs
tests/integration/common/: assertions.rs  config_monitor.rs  data_validator.rs  docker_helpers.rs  mod.rs  test_env.rs
tests/integration/config/: influxdb-init.sh  mosquitto.conf  prometheus.yml  toxiproxy.json
tests/integration/e2e/: config_tests.rs  data_conversion_tests.rs  data_flow_tests.rs  hotreload_tests.rs  mod.rs
tests/integration/mock-plc/: modbus_simulator.py  requirements.txt
tests/integration/performance/: mod.rs  stress_tests.rs  throughput_tests.rs
tests/integration/recovery/: fault_injection.rs  mod.rs  network_recovery_tests.rs  wal_recovery_tests.rs
tests/scripts/: check-frontend-errors.js  final-verification.js  modbus-simulator-v3.py  modbus-simulator.py  quick-test.js  simple-modbus-server.py  test-all-fixes.bat  test-api-driver-creation.js  test-complete-driver-creation.js  test-debug-environment.bat  test-driver-creation.js  test-frontend-navigation.js  test-modbus-client.py  test-modbus-e2e.js  test-system.js  test-websocket.js  test_connection.py  test_modbus_connection.py  verify-system.js
tests/scripts/cors-verification/: README.md  final-cors-verification.js  test-cors-fix.js  test-frontend-cors.html
(+337 files in other folders)
