[workspace]
members = [
    "core/endpoint-kit",
    "core/frame-bus", 
    "core/driver-manager",
    "core/config-manager",
    "core/metrics-server",
    "core/dynamic-driver",
    "core/rest-api",
    "core/web-server",
    "core/monitoring",
    "core/production-config",
    "core/protocol-bridge",
    # "core/advanced-features",  # 暂时禁用以解决链接问题
    "drivers/modbus-static",
    "connectors/mqtt5",
    "edge-gateway"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling  
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Networking
url = "2.4"

# Crypto & TLS
rustls = "0.21"
rustls-native-certs = "0.6"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
prometheus = "0.13"

# Protobuf
prost = "0.12"
prost-types = "0.12"

# Database
rocksdb = "0.21"

# Connection pooling
bb8 = "0.8"

# MQTT client
rumqttc = { version = "0.24", features = ["websocket"] }

# Compression
zstd = "0.12"

# File watching for config hot reload
notify = "6.1"

# Time parsing  
humantime-serde = "1.1"

# Glob patterns
glob = "0.3"

# Modbus  
tokio-modbus = "0.13"

# HTTP server
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
warp = "0.3"

# Dynamic loading
libloading = "0.8"
abi_stable = "0.11"

# Authentication
jsonwebtoken = "9.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Crypto for signatures
sha2 = "0.10"
ed25519-dalek = "2.0"
base64 = "0.21"

# Rate limiting
governor = "0.6"

# Testing frameworks
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers = "0.15"
tempfile = "3.8"

# Integration test dependencies  
paho-mqtt = "0.12"
reqwest = { version = "0.11", features = ["json"] }

# Utilities
once_cell = "1.18"
dashmap = "5.5"
uuid = { version = "1.4", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Edge Gateway Team"]
license = "MIT"
repository = "https://github.com/your-org/edge-gateway"

# Additional workspace dependencies