[workspace]
members = [
    "core/endpoint-kit",
    "core/frame-bus", 
    "core/driver-manager",
    "core/config-manager",
    "core/metrics-server",
    "core/dynamic-driver",
    "core/rest-api",
    "core/web-server",
    "core/monitoring",
    "core/production-config",
    "core/protocol-bridge",
    "core/web-gw-api",           # ➕ 新增 Actix-Web HTTP+WS 服务
    "core/driver-sdk",           # ➕ 新增驱动SDK
    # "core/alert-engine",         # ➕ 新增独立报警引擎 - 暂时禁用编译错误
    "infra/pg-repo",             # ➕ PostgreSQL仓储层
    # "core/advanced-features",  # 暂时禁用以解决链接问题
    "drivers/modbus-static",
    "connectors/mqtt5",
    "edge-gateway"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling  
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Networking
url = "2.4"

# Crypto & TLS
rustls = "0.21"
rustls-native-certs = "0.6"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
prometheus = "0.13"

# Protobuf
prost = "0.12"
prost-types = "0.12"

# Database
rocksdb = "0.21"

# Connection pooling
bb8 = "0.8"

# MQTT client
rumqttc = { version = "0.24", features = ["websocket"] }

# Compression
zstd = "0.12"

# File watching for config hot reload
notify = "6.1"

# Time parsing  
humantime-serde = "1.1"

# Glob patterns
glob = "0.3"

# Regular expressions
regex = "1.10"

# Modbus  
tokio-modbus = "0.13"

# HTTP server
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
warp = "0.3"
actix = "0.13"
actix-web = { version = "4.4", features = ["macros"] }
actix-web-actors = "4.3"
actix-cors = "0.7"
actix-multipart = "0.6"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
influxdb2 = "0.4"

# API Documentation
utoipa = { version = "5.4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.14"

# Time parsing
humantime = "2.1"

# Dynamic loading
libloading = "0.8"
abi_stable = "0.11"

# Authentication
jsonwebtoken = "9.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Crypto for signatures
sha2 = "0.10"
ed25519-dalek = "2.0"
base64 = "0.21"

# Rate limiting
governor = "0.6"

# Testing frameworks
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers = "0.15"
tempfile = "3.8"

# Integration test dependencies  
paho-mqtt = "0.12"
reqwest = { version = "0.11", features = ["json"] }

# Email support
lettre = "0.11"

# Proc macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Utilities
once_cell = "1.18"
dashmap = "5.5"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
parking_lot = "0.12"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Edge Gateway Team"]
license = "MIT"
repository = "https://github.com/your-org/edge-gateway"

# Additional workspace dependencies