[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# 独立包，不属于workspace
[workspace]

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Test dependencies  
paho-mqtt = "0.12"
reqwest = { version = "0.11", features = ["json"] }
fastrand = "2.0"
chrono = { version = "0.4", features = ["serde"] }

# Framework for testing
tokio-test = "0.4"

[[test]]
name = "integration_tests"
path = "integration/mod.rs"