[package]
name = "advanced-features"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Advanced features
uuid.workspace = true
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dashmap.workspace = true
once_cell.workspace = true

# Machine Learning and Analytics (simplified for initial version)
# Future: add full ML libraries when needed

# Compression and encoding
lz4 = "1.24"
zstd.workspace = true

# Internal dependencies
frame-bus = { path = "../frame-bus" }
driver-manager = { path = "../driver-manager" }
production-config = { path = "../production-config" }
monitoring = { path = "../monitoring" }

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
criterion.workspace = true