[package]
name = "config-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }

# File watching
notify = "6.1"

# For hot reloading
once_cell = "1.21"
tokio-util = { workspace = true }

# Path utilities
glob = "0.3"

# Time parsing
humantime-serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }