[package]
name = "dynamic-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Dynamic loading
libloading = "0.8"
abi_stable = "0.11"

# Crypto for signature verification
sha2 = "0.10"
ed25519-dalek = "2.0"
base64 = "0.21"
hex = "0.4"

# Internal dependencies
endpoint-kit = { path = "../endpoint-kit" }
frame-bus = { path = "../frame-bus" }
driver-manager = { path = "../driver-manager" }
uuid.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
mockall.workspace = true
criterion.workspace = true

