[package]
name = "frame-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rocksdb = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
regex = "1.8"

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
prost-build = "0.12"