[package]
name = "frame-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
# Avoid pulling zstd-sys (bindgen/libclang) by disabling default features
# and enabling a minimal set of compression backends
rocksdb = { workspace = true, default-features = false, features = ["snappy", "lz4", "zlib"] }
prometheus = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
regex = "1.8"

# Local dependencies

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
prost-build = "0.12"