[package]
name = "protocol-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
libloading = "0.8"
dlopen = "0.1"
dlopen_derive = "0.1"

# OPC-UA support (disabled for now due to version conflicts)
# opcua = "0.9"

# Modbus support  
# tokio-modbus = "0.14"
# rmodbus = "0.9"

# IPC and shared memory
shared_memory = "0.12"
# mmap = "0.1"  # 临时禁用，有编译错误

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }

[lib]
name = "protocol_bridge"
crate-type = ["rlib", "cdylib"]

[features]
default = ["opcua", "modbus"]
opcua = []
modbus = []
plugin-abi-v1 = []