[package]
name = "web-gw-api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }

# Web framework
actix = { workspace = true }
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
actix-cors = { workspace = true }
actix-multipart = { workspace = true }
awc = "3.5"

# Database
sqlx = { workspace = true }
influxdb2 = { workspace = true }

# API documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Time parsing
humantime = { workspace = true }

# Configuration
serde_yaml = { workspace = true }

# URL parsing
url = { workspace = true }

# Regular expressions
regex = { workspace = true }

# Local dependencies
frame-bus = { path = "../frame-bus" }
pg-repo = { path = "../../infra/pg-repo" }
driver-manager = { path = "../driver-manager" }

[[bin]]
name = "web-gw-api"
path = "src/main.rs"

[[bin]]
name = "db_test"
path = "src/bin/db_test.rs"