[package]
name = "web-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# Web framework
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }

# Internal dependencies
rest-api = { path = "../rest-api" }
frame-bus = { path = "../frame-bus" }

[dev-dependencies]
tokio-test.workspace = true