[package]
name = "modbus-static"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-modbus = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }

# Core dependencies
frame-bus = { path = "../../core/frame-bus" }
endpoint-kit = { path = "../../core/endpoint-kit" }
driver-manager = { path = "../../core/driver-manager" }

# Lua expressions disabled for MVP-0
# mlua = { version = "0.9", features = ["lua54", "async"] }

# For duration parsing
humantime-serde = "1.1"
once_cell = { workspace = true }
inventory = "0.3"

# For static driver registration
ctor = "0.2"
paste = "1.0"

[dev-dependencies]
proptest = "1.0"