[package]
name = "pg-repo"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Database
sqlx = { workspace = true }

# Local dependencies

# Testing
mockall = { workspace = true, optional = true }

[features]
default = []
test-utils = ["mockall"]